--- a/pages/p8/956938.md
+++ b/pages/p8/956938.md
@@ -1,4 +1,4 @@
-### 人再争 都争不过天道(图)
+### 明成祖和永乐大钟(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="天道 君子 小人 天地" src="https://img3.secretchina.com/pic/2020/8-20/p2758832a405415834-ss.jpg"/>
+ <p dir="ltr" style="text-align:center">
+  <img alt="明成祖 朱棣 永乐大钟" src="https://img2.secretchina.com/pic/2018/5-26/p2176091a13077355-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   人再争，都争不过天道。（图片来源：Adobestock）
+   永乐大钟铸造现场。（看中国合成图）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,69 +21,130 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/)  &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html) &nbsp;|&nbsp; [网门免翻墙](http://158.247.203.241:11000/show.aspx?name=ogHome)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  深度報導紀錄片《大疫襲來》- 2020年疫情大流行的背後，哪些真相被忽略、被掩蓋？](http://141.164.51.119:10000/videos/news/../corona/index.html)
-
-#### [ 🔥  音频：中央党校蔡霞教授在红色后代秘密会议上的发言：必须换习、否则亡党！（蔡霞8月17日已被处理）](http://141.164.51.119:10000/videos/news/caixia.html)
-
-#### [ 🔥  蓬佩奥捷克演讲：今天一个更大的威胁是中共及其迫胁和控制活动所构成的威胁](http://141.164.51.119:10000/videos/news/pompeo6.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  人生，总有自己想追求的事物与梦想。而在追逐的过程中，有人选择依循
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/天道" target="_blank">
-    天道
+   <span href="https://zh.wikipedia.org/wiki/%E6%98%8E%E6%88%90%E7%A5%96">
+    明成祖
    </span>
+   朱棣
   </strong>
-  ，有人则选择走小道。走小道即使有所成，也不久远；依循天道，就算只是小有成就，也将源远流长。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  而对一个人来说，人生有三不斗：不与
+  1398年（洪武三十一年），明太祖驾崩，建文帝继位后，实行削藩之策。周王朱橚、湘王朱柏、代王朱桂、齐王朱榑、岷王朱楩相继获罪，被废除藩国。在此情形之下，高僧姚广孝规劝燕王
+  <span href="https://www.secretchina.com/news/gb/tag/朱棣" target="_blank">
+   朱棣
+  </span>
+  起兵，说：“臣已经洞察天命所在”。
+ </p>
+ <p>
+  朱棣便以诛杀建文帝身边的齐泰、黄子澄为名，发动“靖难之役”。此战役中有三次“神风”相助。
+ </p>
+ <p>
+  第一次“神风”，发生于公元1400年的白沟河之战。双方杀得昏天黑地时，朱棣的北军陷入重重包围行将溃败之际，南军李景隆的帅旗竟然被突起的大风吹得折断了！朱棣趁机发起了凌厉的攻势，南军大溃，死伤百里。
+ </p>
+ <p>
+  第二次“神风”则来的更蹊跷了。公元1401年，燕军与南军大战于夹河。在此战中，朱棣的两名大将先后战死，北军溃败之势已无法逆转。然而，就在此时东北风骤起，迎面吹向南军，北军大呼急击，南军大败。
+ </p>
+ <p>
+  第三次“神风”再度挽救了朱棣的北军。1402年，南北两军遭遇于藁城，朱棣遭到了吴杰部的拚死反击，朱棣眼见即将沦为战败俘虏时，忽然，神风四起，昏天黑他，风沙直扑南军，朱棣趁势掩杀斩首6万，迅速扭转了局势。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  战争历时四年，力量悬殊，过程曲折，最终燕王朱棣在南京登基称帝。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  北宋易学大师
+  <span href="https://zh.wikipedia.org/wiki/%E9%82%B5%E9%9B%8D">
+   邵雍
+  </span>
+  在《梅花诗》中也有“飞来燕子寻常事”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  据《
+  <span href="https://zh.wikipedia.org/wiki/%E6%98%8E%E5%8F%B2">
+   明史
+  </span>
+  》记载当时有谶言“莫逐燕，逐燕燕高飞，高飞上京畿”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  因为燕王朱棣有天命在身，“靖难之役”取胜和顺利登基只是顺应天道和规律而已。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/君子" target="_blank">
-    君子
+   <span href="https://www.secretchina.com/news/gb/tag/永乐大钟" target="_blank">
+    永乐大钟
    </span>
   </strong>
-  斗名，不与
-  <strong>
-   小人
-  </strong>
-  斗利，不与
-  <strong>
-   天地
-  </strong>
-  斗巧。
- </p>
- <p>
-  <strong>
-   1
-  </strong>
-  <strong>
-   、不与君子斗名
-  </strong>
- </p>
- <p>
-  我们常说“人算不如天算”，那天的一算是什么呢？其实就是算一个人的德。
- </p>
- <p>
-  德，能守护人的一生，也能帮天生坎坷的人化险为夷。所以身为一个人，应该时常想到自己的所作所为合不合天道。若能符合天道，但么很多福报不用强求，自然就会有了。
- </p>
- <p>
-  与君子斗名，只会在过程中损耗自己的福报，却得不到任何好处。因为人的命运或许是天生注定，但还是能有所改变。例如多做一些善事，多积一些阴德，这是我们自己造的福，别人要抢也抢不去。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -98,65 +159,10 @@
   </div>
  </center>
  <p>
-  经常行善的家庭，必定会有多余的福报，传给子孙。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <strong>
-   2
-  </strong>
-  <strong>
-   、不与
-   <span href="https://www.secretchina.com/news/gb/tag/小人" target="_blank">
-    小人
-   </span>
-   斗利
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  人做的事情，若是违背天道，那是很危险的。因为天道的规律，远胜过一个人的小聪明。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  古代的人对于
-  <span href="https://www.secretchina.com/news/gb/tag/天地" target="_blank">
-   天地
+  <span href="https://zh.wikipedia.org/wiki/%E6%B0%B8%E6%A8%82%E5%A4%A7%E9%90%98">
+   永乐大钟
   </span>
-  、鬼神、自然，都存有敬畏之心。但到了现在，许多人反而笃信无神论，变得无所畏惧，这是很可怕的一件事。
+  在公元1420年，是明成祖朱棣下令铸造的，至今已有五百八十多年历史。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -171,15 +177,7 @@
   </div>
  </center>
  <p>
-  相传唐朝
-  <span href="https://www.google.com.tw/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=&amp;cad=rja&amp;uact=8&amp;ved=2ahUKEwjh1_KKgKnrAhUCBKYKHZmsAYgQmhMwFnoECAcQAg&amp;url=https%3A%2F%2Fzh.wikipedia.org%2Fzh-tw%2F%25E6%259D%258E%25E6%25B7%25B3%25E9%25A2%25A8&amp;usg=AOvVaw3GL5Sb5Pi6dp5M2_mt3QGf">
-   李淳风
-  </span>
-  曾为朝廷算命数，他告诉
-  <span href="https://www.google.com.tw/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=&amp;cad=rja&amp;uact=8&amp;ved=2ahUKEwi_4MCdgKnrAhVeyIsBHfgoArkQmhMwFnoECAsQAg&amp;url=https%3A%2F%2Fzh.wikipedia.org%2Fzh-tw%2F%25E5%2594%2590%25E5%25A4%25AA%25E5%25AE%2597&amp;usg=AOvVaw3nonA5SCYd5ttEhGtM_a6N">
-   唐太宗
-  </span>
-  ，将来会有个姓武的人来夺取他的天下，而且人已经在宫中。
+  永乐大钟铸成后，被送至景山后街的汉经厂（即嵩祝寺），在那里由僧侣们每日诵经撞钟。万历帝时，将永乐大钟移至位于西直门外的万寿寺，每天由6个和尚敲钟。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -194,7 +192,7 @@
   </div>
  </center>
  <p>
-  唐太宗打算断除祸根，杀掉宫中所有姓武的。但李淳风提醒，这本来就是命中注定的劫数，而且这个人还算仁慈，以后会将天下归还。如果现在杀了这个人，那反而会号召更坏的人来，届时的后果就不堪设想了。
+  它高 6.75 米（两层楼高），直径 3.7 米，重 46.5 吨，钟面上、下、内、外合共刻有近23万字，是中国现存最大型的青铜钟，有国宝、“钟王”之美誉，亦为世界最大的佛钟以及世界上铸有最多文字的大钟。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -209,11 +207,7 @@
   </div>
  </center>
  <p>
-  唐太宗闻言，接受了李淳风的建议，果然后来
-  <span href="https://www.google.com.tw/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=&amp;cad=rja&amp;uact=8&amp;ved=2ahUKEwjIssCogKnrAhXdxYsBHQRiD-QQmhMwFnoECAsQAg&amp;url=https%3A%2F%2Fzh.wikipedia.org%2Fzh-tw%2F%25E6%25AD%25A6%25E5%2588%2599%25E5%25A4%25A9&amp;usg=AOvVaw0-skNCqYQduvcn-AXE5dy1">
-   武则天
-  </span>
-  夺取了天下，但政权最后也的确回到了李氏家族手中。
+  除了“现存最大”之外，其钟声也令人称奇叫绝。轻击时，圆润深沉；重击时，浑厚洪亮，音波起伏，节奏明快优雅。声音最远可传方圆90里，尾音长达2分钟以上，经专家测试，其声音振动频率与现代音乐上的标准频率相差无几。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -228,7 +222,7 @@
   </div>
  </center>
  <p>
-  唐太宗心胸宽广，能接纳别人的谏言，但现在人却很少有唐太宗的智慧，许多事只想靠强硬的手段，无论是打官司，或者找关系，千方百计只想斗倒对方来得到自己想要的，却不知道这些行为都是很损福报的。
+  永乐大钟成为世界铸造史上的奇迹，不是因为它的规模和乐音，而是大钟体内外，整整齐齐铸满了二十二万七千字的佛教经文和咒语。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -247,12 +241,7 @@
   </ins>
  </center>
  <p>
-  <strong>
-   3
-  </strong>
-  <strong>
-   、不与天地斗巧
-  </strong>
+  永乐大钟一响，字字钟声，声声佛经，就让听者如同诵读了佛教经文一样，神圣又有创意。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -267,101 +256,100 @@
   </div>
  </center>
  <p>
-  有个律师，只要遇到有利可图的纠纷，就会跑去帮人打官司，这样对方得到赔偿的同时，自己也能从中获取利益。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  但他的钱财不仅留不住，反而还欠了一屁股债。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  这是为什么呢？很多时候，当人产生纷争时，正好是他们化解彼此恶业的机会。但他见有利可图，从中介入的结果，或许最后让对方得到一笔可观的赔偿，但自己却也惹来了不必要的灾祸。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  以前这样的道理人人懂，但现在世间能体会这个道理的人，却越来越少。结果就是动不动就想争取利益，使尽各种心机，用尽各种手段，但到头来还是逃不过天道的规律。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  所以一个修道人知道不要去争那些好处，也不跟人争利益。因为只要一个人有福报，自然就会拥有那些东西；若没有福报，那么即使争到了，由于违背天理，也将招来灾祸。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="margin-bottom:12px;">
-  <hr style="border-top: 1px dashed  ;" width="100%"/>
-  <br/>
-  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
+  <span href="https://www.secretchina.com/news/gb/tag/明成祖" target="_blank">
+   明成祖
   </span>
-  ：每位
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
-  <center>
-   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
-   </span>
-  </center>
+  朱棣通过铸钟鸣钟的形式，利用佛教经典警示百官，教化百姓。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  永乐大钟是国之重器，集振国威、化民志、传佛教、压邪恶、警官吏、正民风、祈国福、保安宁诸多功能于一体，是国家意志、民族精神、华夏文明的一个象征。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  五百多年过去了，永乐大钟完好无损，现藏北京市西北郊北三环路的大钟寺都会响起。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  每逢新年、除夕等重大节日，一般要撞钟108下，有除旧迎新、敲钟祈福之意。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  2020年即将到来，永乐大钟的钟声又要响起，悠扬雄浑，振聋发聩，年复一年地诉说着亘古不变的规律：
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  乾坤朗朗，天地茫茫；
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p dir="ltr">
+  顺天必胜，逆天将亡。
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -374,6 +362,40 @@
     </center>
    </div>
   </center>
+  <p>
+   责任编辑:肖品
+  </p>
+  <p>
+   本文短网址:
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb40wU"/>
+   转载请注明出处，
+   <span style="color:red">
+    严禁建立镜像网站
+   </span>
+   .
+  </p>
+  <p style="margin-bottom:12px;">
+   <hr style="border-top: 1px dashed  ;" width="100%"/>
+   <br/>
+   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ：每位
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+   <center>
+    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+    </span>
+   </center>
+  </p>
   <center>
    <div>
     <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
@@ -391,13 +413,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/943531.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/943531.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/943531.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/08/20/943531.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/956938.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/956938.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/956938.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/26/956938.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p8/943531.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p8/956938.md' width='0px' height='0px'/>
