--- a/pages/nf4514/n12646347.md
+++ b/pages/nf4514/n12646347.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【疫情更新12.26】西班牙现四例新变种病例" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1293044575-600x400.jpg"/>
+<div><img alt="【疫情更新12.26】东京疫情创纪录 含新变种" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1230297452-600x400.jpg"/>
 <div class="caption">
- 图为西班牙的医务工作者正在与中共病毒（武汉肺炎）患者交谈。(David Ramos/Getty Images)
+ 2020年12月25日，日本东京的人们正在欢度圣诞节。（PHILIP FONG/AFP via Getty Images）
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
