--- a/pages/nsc413/n12649253.md
+++ b/pages/nsc413/n12649253.md
@@ -1,4 +1,4 @@
-### 【疫情更新12.28】英国患者现嗅觉异常
+### 【疫情更新12.28】日本国会议员染疫亡
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -55,6 +55,18 @@
 <h4>
  以下是有关病毒疫情的实时更新：
 </h4>
+<h3>
+ 日本参议员羽田雄一郎死于中共肺炎
+</h3>
+<p>
+ 12月28日，日本立宪民主党证实，该党参议院干事长羽田雄一郎在去世之后进行核酸检测，发现感染中共肺炎，53岁的羽田雄一郎成为日本首位染疫去世的国会议员。
+</p>
+<p>
+ 羽田雄一郎五次当选参议员，是日本已故前首相羽田孜的长子。
+</p>
+<p>
+ 日本媒体说，羽田雄一郎24日开始出现发热等不适症状，27日下午被送往东京一家诊所进行核酸检测的途中病情突然恶化，呼吸困难，失去意识，被救护车送往医院之后确认死亡。羽田雄一郎患有糖尿病、高脂血症、高血压等基础性疾病。
+</p>
 <h3>
  疫情艰难时期 美国人更加慷慨助人
 </h3>
