--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -113649,4 +113649,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=12312351)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01010001)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
