--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -113664,4 +113664,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01010201)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01010251)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
