--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -113667,4 +113667,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01010251)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01010301)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
