--- a/pages/nsc418/n12656978.md
+++ b/pages/nsc418/n12656978.md
@@ -5,7 +5,7 @@
 
 
 
-<div><img alt="【疫情更新12·31】佛州当选国会议员染疫" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-80852553-600x400.jpg"/>
+<div><img alt="【疫情更新12·31】中国现英国新毒株" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/shutterstock_1669697443-600x400.jpg"/>
 <div class="caption">
  图为美国国会众议员当选人玛丽亚·埃尔维拉·萨拉萨尔（Maria Elvira Salazar）。（Jason Kempin/Getty Images）
 </div></div><hr/>
