--- a/pages/nf4514/n12656978.md
+++ b/pages/nf4514/n12656978.md
@@ -37,13 +37,47 @@
  以下是有关病毒疫情的实时更新：
 </h4>
 <h3>
- 道琼指数和标普500指数创历史新高
+ 挥别动荡2020年 道指、标普收盘创新高
 </h3>
 <p>
- 道琼指数和标准普尔500指数，以历史新高开启和结束了不平凡的2020年，在此过程中，经历了很大波动。
+ 道琼斯指数和标准普尔500指数以创新高，开启和结束了不平凡的2020年，在此过程中，经历了很大波动。
+</p>
+<blockquote class="twitter-tweet">
+ <p dir="ltr" lang="en">
+  The S&amp;P 500 and the Dow Jones Industrial Average ended 2020 at more record highs Thursday, closing out one of the most tumultuous years in recent memory.
+  <ok href="https://t.co/sKmECaIxIx">
+   https://t.co/sKmECaIxIx
+  </ok>
+ </p>
+ <p>
+  — FOX 5 San Diego (@fox5sandiego)
+  <ok href="https://twitter.com/fox5sandiego/status/1344756031864369152?ref_src=twsrc%5Etfw">
+   December 31, 2020
+  </ok>
+ </p>
+</blockquote>
+<p>
+ <br/>
+ 周四（2020年最后一个交易日），所有三项主要指数收盘均走高。
 </p>
 <p>
- 周四（2020年最后一个交易日），所有三项主要指数收盘均走高。
+ 道指收盘上涨0.7％，或197点。
+ <br/>
+ 标准普尔500指数上涨0.6％。
+ <br/>
+ 纳斯达克综合指数上涨0.1％，略低于它周一的纪录。
+</p>
+<p>
+ 所有这三项基准指数已连续两年在最后一个交易日收涨。
+</p>
+<p>
+ 2020年以来，道指上涨了7.3％，标普上涨了16.3％。而对于纳斯达克而言，这一年是自2009年以来最好的一年，上涨了43.6％。
+</p>
+<p>
+ 2020年初，由于美联储停止降息以及川普总统减税政策产生的经济效应，投资者担心市场可能没有那么顺风顺水。
+</p>
+<p>
+ 但在随后的几个月里，在大流行造成的经济阵痛持续的同时，股市复苏速度却超出了许多人的预期，这在很大程度上得益于美联储的空前干预。美联储大幅削减了利率，并推出了许多借贷工具来支撑市场和经济。
 </p>
 <h3>
  加州住院和入住重症室人数再创新高
@@ -64,7 +98,22 @@
 <p>
  圣塔克拉拉县（Santa Clara）的医生正在急诊室救治一些危重患者，因为重症监护室已经没有空间了。
 </p>
+<blockquote class="twitter-tweet">
+ <p dir="ltr" lang="en">
+  California sets new record for COVID-19 deaths as it faces meteoric rise in hospitalizations
+  <ok href="https://t.co/RU5MGwBZ0O">
+   https://t.co/RU5MGwBZ0O
+  </ok>
+ </p>
+ <p>
+  — CBS News (@CBSNews)
+  <ok href="https://twitter.com/CBSNews/status/1344553879913041920?ref_src=twsrc%5Etfw">
+   December 31, 2020
+  </ok>
+ </p>
+</blockquote>
 <p>
+ <br/>
  加州周四新增了至少27,237例确诊病例以及428例死亡。迄今，已有超过220万加州人染疫，其中超过25,000人死亡。
 </p>
 <h3>
