--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -113754,4 +113754,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01011701)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01011751)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
